<?xml version="1.0"?>
<package format="2">
    <name>petra_stop_bridge</name>
    <version>1.0.0</version>
    <description>
        This package provides conversion for the bridged topic "Stop" from ROS1 to ROS2
    </description>
    <maintainer email="andreas.zachariae@gmail.com">Andreas Zachariae</maintainer>
    <license>TODO</license>
    <author>Andreas Zachariae</author>


    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>move_base_msgs</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>actionlib_msgs</build_export_depend>
    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>move_base_msgs</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>actionlib_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>move_base_msgs</exec_depend>

    <export>
        <!-- Other tools can request additional information be placed here -->
    </export>
</package>
